<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".authentication.AuthenticationFallbackFragment">

    <data>

        <variable
            name="viewModel"
            type="org.tiqr.data.viewmodel.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_fallback_title"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:breakStrategy="balanced"
            android:text="@string/auth_fallback_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="UnusedAttribute" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="label_id, id, label_otp, otp"
            app:flow_verticalGap="4dp"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/unverified_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintVertical_bias="0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/auth_fallback_id"
            android:textAppearance="@style/AppTheme.TextAppearance.Label"
            app:layout_constrainedWidth="true"
            app:layout_constraintHeight_default="spread"
            app:hideIf="@{viewModel.challenge.stepUpChallenge}"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="balanced"
            android:text="@{viewModel.challenge.identity.identifier}"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintWidth_default="spread"
            app:hideIf="@{viewModel.challenge.stepUpChallenge}"
            tools:ignore="MissingConstraints,UnusedAttribute"
            tools:text="&lt;identity&gt;" />

        <TextView
            android:id="@+id/label_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_fallback_otp"
            android:textAppearance="@style/AppTheme.TextAppearance.Label"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.otp.value}"
            tools:ignore="MissingConstraints"
            tools:text="&lt;otp&gt;" />

        <TextView
            android:id="@+id/unverified_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/auth_fallback_pin_unverified_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/unverified"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/unverified"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:breakStrategy="balanced"
            android:text="@string/auth_fallback_pin_unverified"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/guideline_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.challenge.identity != null}"
            android:text="@string/button_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".5" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/button_container_height" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>