<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.AuthenticationConfirmFragment">

    <data>

        <variable
            name="viewModel"
            type="org.tiqr.data.viewmodel.AuthenticationViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_confirm_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_confirm_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="label_name, name, label_id, id"
            app:flow_horizontalGap="4dp"
            app:flow_horizontalStyle="spread_inside"
            app:flow_maxElementsWrap="2"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/label_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintVertical_bias="0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/account_full_name"
            android:textStyle="bold"
            app:layout_constraintHeight_default="spread"
            app:layout_constrainedWidth="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="balanced"
            android:gravity="end"
            android:text="@{viewModel.challenge.identity.displayName}"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintWidth_default="spread"
            tools:ignore="MissingConstraints,UnusedAttribute"
            tools:text="&lt;identity display name&gt;" />

        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/account_id"
            android:textStyle="bold"
            app:layout_constraintHeight_default="spread"
            app:layout_constrainedWidth="true"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="balanced"
            android:gravity="end"
            android:text="@{viewModel.challenge.identityProvider.displayName}"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintWidth_default="spread"
            tools:ignore="MissingConstraints,UnusedAttribute"
            tools:text="&lt;identity provider display name&gt;" />

        <TextView
            android:id="@+id/label_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/auth_confirm_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table" />

        <TextView
            android:id="@+id/service_provider_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.challenge.serviceProviderDisplayName}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_to"
            tools:text="&lt;service provider display name&gt;" />

        <TextView
            android:id="@+id/service_provider_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.challenge.serviceProviderIdentifier}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_provider_name"
            tools:text="&lt;service provider identifier&gt;" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/AppTheme.Button.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_ok"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/button_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_cancel"
            app:layout_constraintWidth_percent=".4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/button_container_height" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>